@@ -1,0 +1,28 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<Patch>
+
+ <!--================================ patches for medicaddons ======================================-->
+
+	<Operation Class="PatchOperationSequence">
+		<success>Always</success>
+		<operations>
+			<li Class="sd_medicaddons.PatchOperationFindMod">
+				<modName>NeuTech Advanced Medical Pod</modName>
+			</li>
+			<li Class="PatchOperationAdd">
+				<xpath>*/thingDef[defName = "NeuTechAdvMedPod"]/comps/li[@Class = "CompProperties_AffectedByFacilities"]/linkableFacilities</xpath>
+				<value>
+					<li>sd_medicaddons_medieval_surg_washpan</li>  
+					<li>sd_medicaddons_medieval_surg_instruments</li>
+					<li>sd_medicaddons_medieval_surg_lamp</li>
+					<li>sd_medicaddons_industrial_surg_instruments</li>
+					<li>sd_medicaddons_industrial_surg_lamp</li>
+					<li>sd_medicaddons_spacer_surg_vitalsmonitor</li>
+					<li>sd_medicaddons_spacer_surg_instruments</li>
+					<li>sd_medicaddons_spacer_surg_lamp</li>
+				</value>
+			</li>
+			</operations>
+	</Operation>
+  
+</Patch>
